; ModuleID = '/home/carl/AnghaBench/timescaledb/src/net/extr_conn.c_ts_connection_register.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/net/extr_conn.c_ts_connection_register.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_CONNECTION_MAX = common dso_local global i64 0, align 8
@conn_ops = common dso_local global i32** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ts_connection_register(i64 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  store i64 %0, i64* %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load i64, i64* %4, align 8
  %7 = load i64, i64* @_CONNECTION_MAX, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %15

10:                                               ; preds = %2
  %11 = load i32*, i32** %5, align 8
  %12 = load i32**, i32*** @conn_ops, align 8
  %13 = load i64, i64* %4, align 8
  %14 = getelementptr inbounds i32*, i32** %12, i64 %13
  store i32* %11, i32** %14, align 8
  store i32 0, i32* %3, align 4
  br label %15

15:                                               ; preds = %10, %9
  %16 = load i32, i32* %3, align 4
  ret i32 %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
